@@ -1,0 +1,12 @@
+.hero {
+  &.is-primary {
+    background: $light-turquoise;
+    &.is-bold {
+      background-image: linear-gradient(141deg, $light-turquoise 0%, $light-turquoise 71%, $turquoise 100%);
+      .title, .subtitle {
+        text-shadow: 1px 1px 1px rgba(150, 150, 150, 0.3);
+        color: #ffffff;
+      }
+    }
+  }
+}
