@@ -1,1 +1,3 @@
 $body-background: #ffffff;
+$turquoise: #1fc8db;
+$light-turquoise: lighten($turquoise, 5);
