@@ -5,6 +5,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "layout";
+@import "hero";
 @import "forms";
 @import "login";
 @import "servers";
