@@ -43,6 +43,4 @@ Rails.application.configure do
   config.action_view.raise_on_missing_translations = true
 
   config.action_mailer.default_url_options = { host: "www.example.com" }
-
-  ENV["FROM_EMAIL"] = "intercity@example.com"
 end
