@@ -1,0 +1,9 @@
+class CreateSettings < ActiveRecord::Migration[5.0]
+  def change
+    create_table :settings do |t|
+      t.string :from_email
+
+      t.timestamps
+    end
+  end
+end
