@@ -1,4 +1,3 @@
-# encoding: UTF-8
 # This file is auto-generated from the current state of the database. Instead
 # of editing this file, please use the migrations feature of Active Record to
 # incrementally modify your database, and then regenerate this schema definition.
@@ -11,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 20160822140931) do
+ActiveRecord::Schema.define(version: 20160823133815) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -103,6 +102,12 @@ ActiveRecord::Schema.define(version: 20160822140931) do
     t.datetime "updated_at",                      null: false
     t.json     "commands"
     t.boolean  "install_default", default: false
+  end
+
+  create_table "settings", force: :cascade do |t|
+    t.string   "from_email"
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
   end
 
   create_table "users", force: :cascade do |t|
