@@ -1,0 +1,2 @@
+example:
+  from_email: example@example.com
