@@ -1,6 +1,6 @@
 require 'test_helper'
 
-class AppOverviewTest < ActionDispatch::IntegrationTest
+class AppOverviewTest < IntegrationTest
   test "User should see a list of all the apps for a given server" do
     login_as users(:john)
     visit root_path
