@@ -16,3 +16,5 @@ v 0.0.1 (unreleased)
 * Add pagination to the backups page (jvanbaarsen)
 * Update to Dokku 0.7.0; Fixes: #158 (jvanbaarsen)
 * Remove the empty state on different forms after adding first item; Fixes: #156 (jvanbaarsen)
+* Added a settings page (jvanbaarsen)
+* FROM_EMAIL env var is deprecated. Set the from_emails on the setting page (jvanbaarsen)
